manifests-successful/jaeger-1.6.1.tgz-manifest.yaml
---
# Source: jaeger/templates/service.yml
apiVersion: v1
kind: Service
metadata:
  name: my-release
  labels:
    app.kubernetes.io/name: jaeger
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/version: "1.57.0"
    app.kubernetes.io/component: tracing
    app.kubernetes.io/managed-by: helm
spec:
  selector:
    app: my-release
  ports:
    - name: admin
      protocol: TCP
      port: 16686
      targetPort: admin
    - name: otlp
      protocol: TCP
      port: 4318
      targetPort: otlp
    - name: zipkin
      protocol: TCP
      port: 9411
      targetPort: zipkin
---
# Source: jaeger/templates/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-release
  labels:
    app.kubernetes.io/name: jaeger
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/version: "1.57.0"
    app.kubernetes.io/component: tracing
    app.kubernetes.io/managed-by: helm
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-release
  template:
    metadata:
      labels:
        app: my-release
        app.kubernetes.io/name: jaeger
        app.kubernetes.io/instance: my-release
        app.kubernetes.io/version: "1.57.0"
        app.kubernetes.io/component: tracing
        app.kubernetes.io/managed-by: helm
    spec:
      containers:
        - name: my-release
          image: "jaegertracing/all-in-one:1.57.0"
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              memory: 1024Mi
              cpu: 300m
            limits:
              memory: 1024Mi
              cpu: 300m
          ports:
            - name: admin
              containerPort: 16686
            - name: otlp
              containerPort: 4318
            - name: zipkin
              containerPort: 9411
---
# Source: jaeger/templates/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-release
  labels:
    app.kubernetes.io/name: jaeger
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/version: "1.57.0"
    app.kubernetes.io/component: tracing
    app.kubernetes.io/managed-by: helm
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  defaultBackend:
    service:
      name: my-release
      port:
        number: 16686
  rules:
    - host: jaeger.romanow-alex.ru
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: my-release
                port:
                  number: 16686
